[package]
description = "Signed URL middleware for Axum, via Extractors"
edition = "2021"
license = "MIT"
name = "axum-signed-urls"
repository = "https://github.com/m1guelpf/axum-signed-urls"
version = "0.1.1"

[dependencies]
anyhow = "1.0.69"
axum = "0.6"
hex = "0.4.3"
hmac = "0.12.1"
qstring = "0.7.2"
sha2 = "0.10.6"

[dev-dependencies]
http = "0.2.8"
map-macro = "0.2.5"
rusty-hook = "0.11"
tokio = { version = "1", features = ["full"] }
